# noid-collections

./: .gitignore  CLAUDE.md  README.md  noid-namespaces.yaml  publish  publishing.md  pyproject.toml  requirements.txt  update
.claude/: settings.json
noid_collections/: collections.json  manifest.py  manifest_sync.py  manifest_sync_test.py
noid_collections/basic/console_display/: __init__.py  basic-console-display.meta.yaml  console_display.py  console_display_test.py
noid_collections/basic/timer/: basic-timer.meta.yaml  timer.py  timer_test.py
noid_collections/data/csv_source/: __init__.py  csv_source.py  csv_source_test.py  data-csv-source.meta.yaml
noid_collections/data/csv_writer/: __init__.py  csv_writer.py  csv_writer_test.py  data-csv-writer.meta.yaml
noid_collections/data/file_writer/: __init__.py  data-file-writer.meta.yaml  file_writer.py
noid_collections/data/sql/: data-sql.meta.yaml  sql.py  sql_test.py
noid_collections/data/text_source/: __init__.py  data-text-source.meta.yaml  text_source.py  text_source_test.py
noid_collections/data/text_writer/: __init__.py  data-text-writer.meta.yaml  text_writer.py  text_writer_test.py
noid_collections/lm_agents/lm/: lm-lm-agent.meta.yaml  lm.py  lm_test.py
noid_collections/lm_agents/ner/: __init__.py  lm-ner.meta.yaml  ner.py  ner_test.py
noid_collections/logic/prolog/: __init__.py  logic-prolog.meta.yaml  prolog.py  prolog_test.py
noid_collections/pdf/extractor_markitdown/: __init__.py  extractor_markitdown.py  pdf-extractor-markitdown.meta.yaml
noid_collections/pdf/extractor_pymupdf/: __init__.py  extractor_pymupdf.py  pdf-extractor-pymupdf.meta.yaml
noid_collections/pdf/ocr/: __init__.py  ocr.py  pdf-ocr.meta.yaml
noid_collections/pdf/postprocessor/: pdf-postprocessor.meta.yaml  postprocessor.py
noid_collections/slm_agents/console_display/: console_display_test.py
noid_collections/slm_agents/csv_source/: csv_source.py  csv_source_test.py
noid_collections/slm_agents/llm/: llm.py  llm_test.py
noid_collections/slm_agents/ner/: ner_test.py
noid_collections/slm_agents/prolog/: prolog.py  prolog_test.py
noid_collections/slm_agents/sql/: sql_test.py
noid_collections/slm_agents/text_source/: text_source.py  text_source_test.py
playground/learning/01-basic/: copy_text_file.json  csv_to_console.json  prolog_to_console.json  (+6 more)
scenes/: prolog_to_console.json  slm_ner_prolog.json  text_to_console.json
(+30 files in other folders)
